# FerdaTimeTranslator

./: .flake8  FerTimTran  FerTimTran.py  LICENSE  README.md  pyproject.toml
ferda_time_translator/: constants.py  translator.py
scripts/: validate
tests/: test_translator.py
