[tool.poetry]
name = "ferda_time_translator"
version = "0.1.1"
description = "Simple program that will translate the current time into ferda standard time (FST)"
authors = ["Will Lavalliere <willlavalliere@gmail.com>", "Gavin Hailey <gavin.g.hailey@gmail.com>"]
license = "gpl-3.0"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
freezegun = "^1.2.2"

[tools.pytest.ini_options]
pythonpath = [
    "ferda_time_translator",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
